force-app/main/default/objects/CRMforNonProfit__Error_Log__c/fields/CRMforNonProfit__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>