force-app/main/default/objects/CRMforNonProfit__Error_Log__c/fields/CRMforNonProfit__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>