force-app/main/default/objects/CRMforNonProfit__Error_Log__c/fields/CRMforNonProfit__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>