force-app/main/default/objects/CRMforNonProfit__Error_Log__c/fields/CRMforNonProfit__Keyword__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Keyword__c</fullName>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>