force-app/main/default/objects/CRMforNonProfit__Error_Log__c/fields/CRMforNonProfit__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>