force-app/main/default/objects/CRMforNonProfit__Error_Log__c/fields/CRMforNonProfit__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>